# WEB_HW_7

./: README.md  config.ini  crud_cli.py  my_select.py  pyproject.toml
alembic/: env.py
alembic/versions/: 924ee7eeb38e_init.py
database/: db.py  models.py
seeds/: all_seed.py
seeds/separated_seeds/: groups.py  lessons.py  scores.py  students.py  teachers.py
