[tool.poetry]
name = "web-hw-7"
version = "0.1.0"
description = ""
authors = ["Viacheslav Artemenko <v.a.artemenko1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
faker = "^19.13.0"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
